src-ken&y/objects/UOM_Conversion_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Identifier__c</fullName>
        <label>Facility Identifier</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_1__c</fullName>
        <label>Key-1</label>
        <length>58</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_2__c</fullName>
        <label>Key-2</label>
        <length>58</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM_1_Quantity__c</fullName>
        <label>UOM 1 Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM_1__c</fullName>
        <label>UOM 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM_2_Quantity__c</fullName>
        <label>UOM 2 Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM_2__c</fullName>
        <label>UOM 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>UOM Conversion Details</label>
</CustomObject>